added some UI styling